fix collapse/expand controls button

--- a/src/core/map/mapbox/style.css
+++ b/src/core/map/mapbox/style.css
@@ -1,10 +1,3 @@
-/* Controls */
-.geoman-controls,
-.geoman-controls .gm-reactive-controls,
-.geoman-controls .gm-reactive-controls > div {
-  display: contents;
-}
-
 .mapboxgl-ctrl-group button.gm-control-button {
   color: #2371a0;
   padding: 6px;
